urpc/internal/core/analysis/testdata/errors/naming/enum_not_pascal.ufo
// @expect: E101

enum lowercase {
	Active
	Inactive
}
